menu component left align fix

--- a/design/system/components/primitives/Menu/Menu.css
+++ b/design/system/components/primitives/Menu/Menu.css
@@ -96,6 +96,7 @@
   position: absolute;
   top: calc(100% + 8px);
   left: 0;
+  right: auto;
   min-width: 200px;
   max-height: 400px;
   background-color: var(--surface-dropdown);
@@ -110,6 +111,12 @@
   opacity: 1;
   transform: translateZ(0);
   will-change: transform, opacity;
+}
+
+/* Right-aligned when would overflow */
+.menu-content--align-right {
+  left: auto;
+  right: 0;
 }
 
 .menu-content--closing {
